# prismaquant-llama

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  WIZARD-IMPL-PLAN.md  pyproject.toml  requirements.txt
docs/: GETTING-STARTED.md  WIZARD-DESIGN.md  gemma4-profile.md  methodology.md
examples/: config.toml  default-formats.txt  format-perf-default.json  format-tps-gfx1150.json  format_metadata_ikllama.json  pinned-tensors-qwen36.json
examples/recipes/: qwen36-14G-pure-ppl.json  qwen36-19G-pure-ppl.json  qwen36-21G-pure-ppl.json
src/pipeline/: PARAMETERIZATION-TODO.md  README.md  run-pipeline.sh
src/pipeline/comparison-sweep/: post-comparison-stage-h.sh  post-stage-h-comparison-rerun.sh  qwopus-pipeline-bench-only.sh  qwopus-pipeline-orchestrator.sh  qwopus-pipeline-stage-f.sh  qwopus-pipeline-stage-g.sh  qwopus-pipeline-stage-h.sh  wait-then-comparison.sh
src/pipeline/cpp/quantize-cost/: VENDORED-FROM.txt  quantize-cost.cpp
src/pipeline/scripts/: allocator.py  run-baselines-c100.sh  run-ppl100.sh
src/prismaquant_llama/: __init__.py  calibration.py  cli.py  config.py  explore.py  format_discovery.py  format_metadata_base.json  input_resolver.py  paths.py  pipeline_runner.py  precondition.py  show_frontier.py  wizard.py
src/prismaquant_llama/cpp/quantize-cost/: CMakeLists.txt  README.md  VENDORED-FROM.txt  quantize-cost.cpp
src/prismaquant_llama/data/: bartowski-imatrix-v5-semantic.txt  config.toml.default  system.json.default
src/prismaquant_llama/scripts/: allocator.py  awq_apply.py  bridge_probe_to_gguf.py  emit_fisher_sidecar.py  gguf_mmap_patch.py  gptq_apply.py
src/wizard/: __init__.py  calibration.py  format_discovery.py  wizard.py
tests/: test_preflight_deps.py  test_show_frontier_overlay.py  test_stage_k_dedup.py
tests/fixtures/stage_k/: summary-PQ25.json
tests/fixtures/stage_k/recipes/: recipe-PQ25-009.json  recipe-PQ25-090.json  recipe-PQ25-111.json  recipe-PQ25-153.json  recipe-PQ25-225.json  recipe-PQ25-252.json  recipe-PQ25-333.json  recipe-PQ25-522.json  recipe-PQ25-531.json  recipe-PQ25-900.json
tools/: migrate-paths.sh  sync-quantize-cost.sh
