[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "prismaquant-llama"
version = "0.2.0a1"
description = "Bring prismaquant's Bayesian per-tensor mixed-precision allocation to llama.cpp / GGUF — adapts the prismaquant allocator (originally targeted at vLLM) to work with any prismaquant-enabled fork of llama.cpp via a CLI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jeremy Jones", email = "jeremy@myfacetwittertube.com"},
]
keywords = ["llama.cpp", "prismaquant", "quantization", "gguf", "mixed-precision", "allocator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
prismaquant-llama = "prismaquant_llama.cli:main"

[project.urls]
Homepage = "https://github.com/jimbothigpen/prismaquant-llama"
Issues = "https://github.com/jimbothigpen/prismaquant-llama/issues"
Documentation = "https://github.com/jimbothigpen/prismaquant-llama#readme"

[tool.setuptools.packages.find]
where = ["src"]
include = ["prismaquant_llama*"]

[tool.setuptools.package-data]
prismaquant_llama = [
    "data/*",
    "scripts/*.py",
    "cpp/quantize-cost/*",
]
